Improve work day service tests