@@ -5,12 +5,11 @@ import de.jollyday.ManagerParameter;
 import de.jollyday.ManagerParameters;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.synyx.urlaubsverwaltung.application.domain.Application;
-import org.synyx.urlaubsverwaltung.application.domain.VacationCategory;
-import org.synyx.urlaubsverwaltung.demodatacreator.DemoDataCreator;
-import org.synyx.urlaubsverwaltung.period.DayLength;
 import org.synyx.urlaubsverwaltung.person.Person;
-import org.synyx.urlaubsverwaltung.settings.FederalState;
 import org.synyx.urlaubsverwaltung.settings.Settings;
 import org.synyx.urlaubsverwaltung.settings.SettingsService;
 
@@ -23,312 +22,464 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static java.math.BigDecimal.TEN;
+import static java.time.Month.DECEMBER;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import static org.synyx.urlaubsverwaltung.application.domain.VacationCategory.HOLIDAY;
+import static org.synyx.urlaubsverwaltung.demodatacreator.DemoDataCreator.createApplication;
+import static org.synyx.urlaubsverwaltung.demodatacreator.DemoDataCreator.createPerson;
+import static org.synyx.urlaubsverwaltung.demodatacreator.DemoDataCreator.createVacationType;
+import static org.synyx.urlaubsverwaltung.demodatacreator.DemoDataCreator.createWorkingTime;
+import static org.synyx.urlaubsverwaltung.period.DayLength.FULL;
+import static org.synyx.urlaubsverwaltung.period.DayLength.MORNING;
+import static org.synyx.urlaubsverwaltung.period.DayLength.NOON;
+import static org.synyx.urlaubsverwaltung.settings.FederalState.BAYERN_AUGSBURG;
 
-
-/**
- * Unit test for {@link WorkDaysService}.
- */
+@ExtendWith(MockitoExtension.class)
 class WorkDaysServiceTest {
 
-    private WorkDaysService instance;
-    private PublicHolidaysService publicHolidaysService;
-    private WorkingTimeService workingTimeService;
-    private SettingsService settingsService;
+    private WorkDaysService sut;
 
-    private Application application;
-    private WorkingTime workingTime;
-    private Person person;
+    @Mock
+    private WorkingTimeService workingTimeService;
+    @Mock
+    private SettingsService settingsService;
 
     @BeforeEach
     void setUp() {
-
-        settingsService = mock(SettingsService.class);
-        when(settingsService.getSettings()).thenReturn(new Settings());
-
-        ClassLoader cl = Thread.currentThread().getContextClassLoader();
-        URL url = cl.getResource("Holidays_de.xml");
-        ManagerParameter managerParameter = ManagerParameters.create(url);
-        HolidayManager holidayManager = HolidayManager.getInstance(managerParameter);
-
-        publicHolidaysService = new PublicHolidaysService(settingsService, holidayManager);
-        workingTimeService = mock(WorkingTimeService.class);
-
-        instance = new WorkDaysService(publicHolidaysService, workingTimeService, settingsService);
-
-        person = DemoDataCreator.createPerson();
-        application = DemoDataCreator.createApplication(person,
-            DemoDataCreator.createVacationType(VacationCategory.HOLIDAY));
-
-        workingTime = DemoDataCreator.createWorkingTime();
-
-        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person),
-            any(LocalDate.class)))
-            .thenReturn(Optional.of(workingTime));
+        final var publicHolidaysService = new PublicHolidaysService(settingsService, getHolidayManager());
+        sut = new WorkDaysService(publicHolidaysService, workingTimeService, settingsService);
     }
 
-
-    /**
-     * Test of getWeekDays method, of class OwnCalendarService.
-     */
     @Test
     void testGetWeekDays() {
 
-        LocalDate start = LocalDate.of(2011, 11, 16);
-        LocalDate end = LocalDate.of(2011, 11, 28);
+        final LocalDate start = LocalDate.of(2011, 11, 16);
+        final LocalDate end = LocalDate.of(2011, 11, 28);
 
-        double returnValue = instance.getWeekDays(start, end);
-
-        assertNotNull(returnValue);
-        assertEquals(9.0, returnValue, 0.0);
+        final double weekDaysCount = sut.getWeekDays(start, end);
+        assertThat(weekDaysCount).isEqualTo(9.0);
     }
 
-
-    /**
-     * Test of getWorkDays method, of class OwnCalendarService.
-     */
     @Test
-    void testGetVacationDays() {
+    void getWorkDaysWithPublicHolidaysAndBothOnWeekend() {
+
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+        final Application application = createApplication(person, createVacationType(HOLIDAY));
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
 
         // testing for full days
-        application.setDayLength(DayLength.FULL);
+        application.setDayLength(FULL);
 
         // Testing for 2010: 17.12. is Friday, 31.12. is Friday
-        // between these dates: 2 public holidays (25., 26.) plus 2*0.5 public holidays (24., 31.)
-        // total days: 14
+        // between these dates:
+        //   Public Holidays : 2 (25., 26.) and 2*0.5 (24., 31.) => 3
+        //   Weekends : 2 (18-19 and 25-26 - already public holidays)) => 2
+        // total days: 15
         // netto days: 10 (considering public holidays and weekends)
+        final LocalDate start = LocalDate.of(2010, 12, 17);
+        final LocalDate end = LocalDate.of(2010, 12, 31);
 
-        LocalDate start = LocalDate.of(2010, 12, 17);
-        LocalDate end = LocalDate.of(2010, 12, 31);
-
-        BigDecimal returnValue = instance.getWorkDays(application.getDayLength(), start, end, person);
-
-        assertNotNull(returnValue);
-        assertEquals(BigDecimal.valueOf(10.0), returnValue);
-
-        // Testing for 2009: 17.12. is Thursday, 31.12. ist Thursday
-        // between these dates: 2 public holidays (25., 26.) plus 2*0.5 public holidays (24., 31.)
-        // total days: 14
-        // netto days: 9 (considering public holidays and weekends)
-
-        start = LocalDate.of(2009, 12, 17);
-        end = LocalDate.of(2009, 12, 31);
-
-        returnValue = instance.getWorkDays(application.getDayLength(), start, end, person);
-
-        assertNotNull(returnValue);
-        assertEquals(BigDecimal.valueOf(9.0), returnValue);
-
-        // start date and end date are not in the same year
-        start = LocalDate.of(2011, 12, 26);
-        end = LocalDate.of(2012, 1, 15);
-
-        returnValue = instance.getWorkDays(application.getDayLength(), start, end, person);
-
-        assertNotNull(returnValue);
-        assertEquals(BigDecimal.valueOf(13.0), returnValue);
-
-        // Labour Day (1st May)
-        start = LocalDate.of(2009, 4, 27);
-        end = LocalDate.of(2009, 5, 2);
-
-        returnValue = instance.getWorkDays(application.getDayLength(), start, end, person);
-
-        assertNotNull(returnValue);
-        assertEquals(BigDecimal.valueOf(4.0), returnValue);
-
-        // start date is Sunday, end date Saturday
-        start = LocalDate.of(2011, 1, 2);
-        end = LocalDate.of(2011, 1, 8);
-
-        returnValue = instance.getWorkDays(application.getDayLength(), start, end, person);
-
-        assertNotNull(returnValue);
-        assertEquals(BigDecimal.valueOf(4.0), returnValue);
-
-        // testing for half days
-        application.setDayLength(DayLength.MORNING);
-
-        start = LocalDate.of(2011, 1, 4);
-        end = LocalDate.of(2011, 1, 8);
-
-        returnValue = instance.getWorkDays(application.getDayLength(), start, end, person);
-
-        assertNotNull(returnValue);
-        assertEquals(BigDecimal.valueOf(1.5), returnValue);
+        final BigDecimal weekDaysCount = sut.getWorkDays(application.getDayLength(), start, end, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(TEN);
     }
 
+    @Test
+    void getWorkDaysWithPublicHolidaysAndOneOnWeekend() {
+
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+        final Application application = createApplication(person, createVacationType(HOLIDAY));
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        // testing for full days
+        application.setDayLength(FULL);
+
+        // Testing for 2009: 17.12. is Thursday, 31.12. ist Thursday
+        // between these dates:
+        //   Public Holidays : 2 (25., 26.) and 2*0.5 (24., 31.) => 3
+        //   Weekends : 2 (19-20 and 26-27 - one is already public holidays)) => 3
+        // total days: 15
+        // netto days: 9 (considering public holidays and weekends)
+        final LocalDate start = LocalDate.of(2009, 12, 17);
+        final LocalDate end = LocalDate.of(2009, 12, 31);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(application.getDayLength(), start, end, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(9));
+    }
+
+    @Test
+    void getWorkDaysWithHalfDaysMorning() {
+
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+        final Application application = createApplication(person, createVacationType(HOLIDAY));
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        // testing for half days morning
+        application.setDayLength(MORNING);
+
+        final LocalDate start = LocalDate.of(2011, 1, 4);
+        final LocalDate end = LocalDate.of(2011, 1, 8);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(application.getDayLength(), start, end, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(1.5));
+    }
+
+    @Test
+    void getWorkDaysWithHalfDaysNoon() {
+
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+        final Application application = createApplication(person, createVacationType(HOLIDAY));
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        // testing for half days noon
+        application.setDayLength(NOON);
+
+        final LocalDate start = LocalDate.of(2011, 1, 4);
+        final LocalDate end = LocalDate.of(2011, 1, 8);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(application.getDayLength(), start, end, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(1.5));
+    }
+
+    @Test
+    void getWorkDaysWithSundayToSaturday() {
+
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+        final Application application = createApplication(person, createVacationType(HOLIDAY));
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        // testing for full days
+        application.setDayLength(FULL);
+
+        // start date is Sunday, end date Saturday
+        final LocalDate start = LocalDate.of(2011, 1, 2);
+        final LocalDate end = LocalDate.of(2011, 1, 8);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(application.getDayLength(), start, end, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(4));
+    }
+
+    @Test
+    void getWorkDaysWithPublicHolidaysOverLabourDay() {
+
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+        final Application application = createApplication(person, createVacationType(HOLIDAY));
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        // testing for full days
+        application.setDayLength(FULL);
+
+        // Labour Day (1st May)
+        final LocalDate start = LocalDate.of(2009, 4, 27);
+        final LocalDate end = LocalDate.of(2009, 5, 2);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(application.getDayLength(), start, end, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(4));
+    }
+
+    @Test
+    void getWorkDaysWithPublicHolidaysOverYears() {
+
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+        final Application application = createApplication(person, createVacationType(HOLIDAY));
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        // testing for full days
+        application.setDayLength(FULL);
+
+        // start date and end date are not in the same year
+        final LocalDate start = LocalDate.of(2011, 12, 26);
+        final LocalDate end = LocalDate.of(2012, 1, 15);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(application.getDayLength(), start, end, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(13));
+    }
 
     @Test
     void testGetWorkDaysForTeilzeitPersons() {
 
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
         List<Integer> workingDays = Arrays.asList(DayOfWeek.MONDAY.getValue(), DayOfWeek.WEDNESDAY.getValue(),
             DayOfWeek.FRIDAY.getValue(), DayOfWeek.SATURDAY.getValue());
-        workingTime.setWorkingDays(workingDays, DayLength.FULL);
+        workingTime.setWorkingDays(workingDays, FULL);
 
-        LocalDate startDate = LocalDate.of(2013, Month.DECEMBER, 16);
-        LocalDate endDate = LocalDate.of(2013, Month.DECEMBER, 31);
+        final LocalDate startDate = LocalDate.of(2013, DECEMBER, 16);
+        final LocalDate endDate = LocalDate.of(2013, DECEMBER, 31);
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.FULL, startDate, endDate, person);
-
-        assertEquals(new BigDecimal("8.0"), returnValue);
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, startDate, endDate, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(8));
     }
-
 
     @Test
     void testGetWorkDaysForVollzeitPersons() {
 
-        List<Integer> workingDays = Arrays.asList(DayOfWeek.MONDAY.getValue(), DayOfWeek.TUESDAY.getValue(),
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        List<Integer> workingDays = List.of(DayOfWeek.MONDAY.getValue(), DayOfWeek.TUESDAY.getValue(),
             DayOfWeek.WEDNESDAY.getValue(), DayOfWeek.THURSDAY.getValue(), DayOfWeek.FRIDAY.getValue());
-        workingTime.setWorkingDays(workingDays, DayLength.FULL);
+        workingTime.setWorkingDays(workingDays, FULL);
 
-        LocalDate startDate = LocalDate.of(2013, Month.DECEMBER, 16);
-        LocalDate endDate = LocalDate.of(2013, Month.DECEMBER, 31);
+        final LocalDate startDate = LocalDate.of(2013, DECEMBER, 16);
+        final LocalDate endDate = LocalDate.of(2013, DECEMBER, 31);
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.FULL, startDate, endDate, person);
-
-        assertEquals(new BigDecimal("9.0"), returnValue);
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, startDate, endDate, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(9));
     }
-
 
     @Test
     void testGetWorkDaysHalfDay() {
 
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
         // monday
-        LocalDate startDate = LocalDate.of(2013, Month.NOVEMBER, 25);
-        LocalDate endDate = LocalDate.of(2013, Month.NOVEMBER, 25);
+        final LocalDate startDate = LocalDate.of(2013, Month.NOVEMBER, 25);
+        final LocalDate endDate = LocalDate.of(2013, Month.NOVEMBER, 25);
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.MORNING, startDate, endDate, person);
-
-        assertEquals(new BigDecimal("0.5"), returnValue);
+        final BigDecimal weekDaysCount = sut.getWorkDays(MORNING, startDate, endDate, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(0.5));
     }
-
 
     @Test
     void testGetWorkDaysZero() {
 
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
         // saturday
-        LocalDate startDate = LocalDate.of(2013, Month.NOVEMBER, 23);
-        LocalDate endDate = LocalDate.of(2013, Month.NOVEMBER, 23);
+        final LocalDate startDate = LocalDate.of(2013, Month.NOVEMBER, 23);
+        final LocalDate endDate = LocalDate.of(2013, Month.NOVEMBER, 23);
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.FULL, startDate, endDate, person);
-
-        assertEquals(BigDecimal.ZERO, returnValue.setScale(0));
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, startDate, endDate, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.ZERO);
     }
-
 
     @Test
     void testGetWorkDaysHalfDayZero() {
 
+        when(settingsService.getSettings()).thenReturn(new Settings());
+
+        final Person person = createPerson();
+
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
         // saturday
-        LocalDate startDate = LocalDate.of(2013, Month.NOVEMBER, 23);
-        LocalDate endDate = LocalDate.of(2013, Month.NOVEMBER, 23);
+        final LocalDate startDate = LocalDate.of(2013, Month.NOVEMBER, 23);
+        final LocalDate endDate = LocalDate.of(2013, Month.NOVEMBER, 23);
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.MORNING, startDate, endDate, person);
-
-        assertEquals(BigDecimal.ZERO, returnValue.setScale(0));
+        final BigDecimal weekDaysCount = sut.getWorkDays(MORNING, startDate, endDate, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.ZERO);
     }
-
 
     @Test
     void testGetWorkDaysForChristmasEve() {
 
-        LocalDate date = LocalDate.of(2013, Month.DECEMBER, 24);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.FULL, date, date, person);
+        final Person person = createPerson();
 
-        assertEquals(new BigDecimal("0.5"), returnValue);
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        final LocalDate date = LocalDate.of(2013, DECEMBER, 24);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, date, date, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(0.5));
     }
-
 
     @Test
     void testGetWorkDaysForChristmasEveDayLengthMorning() {
 
-        LocalDate date = LocalDate.of(2013, Month.DECEMBER, 24);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.MORNING, date, date, person);
+        final Person person = createPerson();
 
-        assertEquals(new BigDecimal("0.5"), returnValue);
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        final LocalDate date = LocalDate.of(2013, DECEMBER, 24);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(MORNING, date, date, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(0.5));
     }
-
 
     @Test
     void testGetWorkDaysForNewYearsEve() {
 
-        LocalDate date = LocalDate.of(2013, Month.DECEMBER, 31);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.FULL, date, date, person);
+        final Person person = createPerson();
 
-        assertEquals(new BigDecimal("0.5"), returnValue);
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        final LocalDate date = LocalDate.of(2013, DECEMBER, 31);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, date, date, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(0.5));
     }
-
 
     @Test
     void testGetWorkDaysForNewYearsEveDayLengthMorning() {
 
-        LocalDate date = LocalDate.of(2013, Month.DECEMBER, 31);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.MORNING, date, date, person);
+        final Person person = createPerson();
 
-        assertEquals(new BigDecimal("0.5"), returnValue);
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        final LocalDate date = LocalDate.of(2013, DECEMBER, 31);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(MORNING, date, date, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(0.5));
     }
-
 
     @Test
     void testGetWorkDaysForChristmasEveAndNewYearsHoliday() {
 
-        LocalDate from = LocalDate.of(2013, Month.DECEMBER, 23);
-        LocalDate to = LocalDate.of(2014, Month.JANUARY, 2);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.FULL, from, to, person);
+        final Person person = createPerson();
 
-        assertEquals(new BigDecimal("5.0"), returnValue);
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        final LocalDate from = LocalDate.of(2013, DECEMBER, 23);
+        final LocalDate to = LocalDate.of(2014, Month.JANUARY, 2);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, from, to, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(5));
     }
-
 
     @Test
     void testGetWorkDaysForChristmasEveAndNewYearsHolidayDayLengthMorning() {
 
-        LocalDate from = LocalDate.of(2013, Month.DECEMBER, 23);
-        LocalDate to = LocalDate.of(2014, Month.JANUARY, 2);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        BigDecimal returnValue = instance.getWorkDays(DayLength.MORNING, from, to, person);
+        final Person person = createPerson();
 
-        assertEquals(new BigDecimal("2.5"), returnValue);
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        final LocalDate from = LocalDate.of(2013, DECEMBER, 23);
+        final LocalDate to = LocalDate.of(2014, Month.JANUARY, 2);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(MORNING, from, to, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.valueOf(2.5));
     }
-
 
     @Test
     void ensureCorrectWorkDaysForAssumptionDayForSystemDefaultFederalState() {
 
-        LocalDate from = LocalDate.of(2016, Month.AUGUST, 15);
-        LocalDate to = LocalDate.of(2016, Month.AUGUST, 15);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        BigDecimal workDays = instance.getWorkDays(DayLength.FULL, from, to, person);
+        final Person person = createPerson();
 
-        assertEquals(new BigDecimal("1.0"), workDays);
+        final WorkingTime workingTime = createWorkingTime();
+        when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person), any(LocalDate.class)))
+            .thenReturn(Optional.of(workingTime));
+
+        final LocalDate from = LocalDate.of(2016, Month.AUGUST, 15);
+        final LocalDate to = LocalDate.of(2016, Month.AUGUST, 15);
+
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, from, to, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.ONE);
     }
-
 
     @Test
     void ensureCorrectWorkDaysForAssumptionDayForOverriddenFederalState() {
 
-        LocalDate from = LocalDate.of(2016, Month.AUGUST, 15);
-        LocalDate to = LocalDate.of(2016, Month.AUGUST, 15);
+        when(settingsService.getSettings()).thenReturn(new Settings());
 
-        workingTime.setFederalStateOverride(FederalState.BAYERN_AUGSBURG);
+        final LocalDate from = LocalDate.of(2016, Month.AUGUST, 15);
+        final LocalDate to = LocalDate.of(2016, Month.AUGUST, 15);
 
+        final WorkingTime workingTime = createWorkingTime();
+        workingTime.setFederalStateOverride(BAYERN_AUGSBURG);
+
+        final Person person = createPerson();
         when(workingTimeService.getByPersonAndValidityDateEqualsOrMinorDate(eq(person),
             any(LocalDate.class)))
             .thenReturn(Optional.of(workingTime));
 
-        BigDecimal workDays = instance.getWorkDays(DayLength.FULL, from, to, person);
+        final BigDecimal weekDaysCount = sut.getWorkDays(FULL, from, to, person);
+        assertThat(weekDaysCount).isEqualByComparingTo(BigDecimal.ZERO);
+    }
 
-        assertEquals(new BigDecimal("0.0"), workDays);
+    private HolidayManager getHolidayManager() {
+        final ClassLoader cl = Thread.currentThread().getContextClassLoader();
+        final URL url = cl.getResource("Holidays_de.xml");
+        final ManagerParameter managerParameter = ManagerParameters.create(url);
+        return HolidayManager.getInstance(managerParameter);
     }
 }
